--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <title>Портфолио</title>
+  <title>Хакни меня, если сможешь!</title>
 </head>
 
 <body>
@@ -40,21 +40,23 @@
         <div class="container about__container">
           <div class="about__info">
             <h1 class="title about__title">
-              Привет, меня зовут Ксения, <br />
-              я учусь на специалиста по кибербезопасности.
+              Подростки теряют аккаунты из-за простых ошибок.
+              Не будь в их числе!
+               <br />
+               5 минут чтения = 100% защита твоего цифрового "я".
             </h1>
             <div class="about__desc">
               Это методическое пособие предназначено для студентов.
               <br />
-              Оно содержит теоретические основы, практические 
+              Оно содержит теоретические основы, практические
               <br />
               рекомендации, примеры и задания, которые помогут в освоении теории по кибербезопасности. <br />
             </div>
 
-            <button class="button">Скачать quiz-игру</button>
+            <button class="button">Скачать квиз-игру</button>
           </div>
           <div class="about__avatar">
-            <img src="img/john.png" alt="avatar" class="about__img" />
+            <img src="img/kb.jpg" alt="avatar" class="about__img" />
           </div>
         </div>
       </section>
@@ -72,21 +74,22 @@
                 <span class="recent-posts__separator">|</span>Tyumen, Russia
               </div>
               <div class="recent-posts__text">
-                 
-                <p>- Просмотрите оглавление, чтобы понять структуру.  </p>
-                <p>- Отметьте разделы, которые соответствуют вашей учебной программе.  </p>
-                <p> - Обратите внимание на ключевые определения и формулы (они часто выделены в рамочки или жирным шрифтом).  </p>
+
+                <p>- Просмотрите оглавление, чтобы понять структуру. </p>
+                <p>- Отметьте разделы, которые соответствуют вашей учебной программе. </p>
+                <p> - Обратите внимание на ключевые определения и формулы (они часто выделены в рамочки или жирным
+                  шрифтом). </p>
               </div>
             </article>
             <article class="recent-posts__article">
               <div class="recent-posts__subtitle">
-                <b>Шаг 2: Глубокое изучение теории  </b>
+                <b>Шаг 2: Глубокое изучение теории </b>
               </div>
               <div class="recent-posts__info">
                 <div class="recent-posts__info">
                   12 Mar 2025
                   <span class="recent-posts__separator">|</span>Tyumen, Russia
-                  
+
                 </div>
                 <div class="recent-posts__text">
                   <p>- Читайте блоками (по 15–20 минут), делая пометки.</p>
@@ -104,12 +107,12 @@
           <div class="fetured__works">
             <article class="work">
               <div class="work__img-wrap">
-                <img src="img/work1.jpg" alt="" class="work__img" />
+                <img src="img/kb1.jpg" alt="" class="work__img" />
               </div>
               <div class="work__info">
                 <a href="#" class="work__title">Краткое описание</a>
                 <div class="work__subtitle">
-                  <div class="work__date">2025</div>
+                  <div class="work__date">1</div>
                   <div class="work__category">Dashboard</div>
                 </div>
                 <div class="work__text">
@@ -121,12 +124,12 @@
             </article>
             <article class="work">
               <div class="work__img-wrap">
-                <img src="img/work2.png" alt="" class="work__img" />
+                <img src="img/kb2.jpg" alt="" class="work__img" />
               </div>
               <div class="work__info">
                 <a href="#" class="work__title">Основные понятия</a>
                 <div class="work__subtitle">
-                  <div class="work__date">2025</div>
+                  <div class="work__date">2</div>
                   <div class="work__category">Illustration</div>
                 </div>
                 <div class="work__text">
@@ -138,12 +141,12 @@
             </article>
             <article class="work">
               <div class="work__img-wrap">
-                <img src="img/work3.png" alt="" class="work__img" />
+                <img src="img/kb3.jpg" alt="" class="work__img" />
               </div>
               <div class="work__info">
                 <a href="#" class="work__title">Практическое применение</a>
                 <div class="work__subtitle">
-                  <div class="work__date">2018</div>
+                  <div class="work__date">3</div>
                   <div class="work__category">Typography</div>
                 </div>
                 <div class="work__text">
